[WIP] Support objdiff for anon. tuples

--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -3,6 +3,7 @@
 --cc:tcc
 --warning[ObservableStores]:off
 --warning[Deprecated]:off
+--warning[UnusedImport]:off
 -d:shellThrowException
 --embedsrc
 --showAllMismatches:on
