[FIX(algo)] LCS correctly handle zero-length sequences
Changed:
  - `longestCommonSubsequence` now returns `seq[seq[T]]` - list of all
    possible subsequences.
Added:
  - FEATURE support for custom equality comparison proc for the lcs

--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -4,6 +4,7 @@
 --warning[ObservableStores]:off
 --warning[Deprecated]:off
 --warning[UnusedImport]:off
+--warning[UnsafeSetLen]:off
 -d:shellThrowException
 --embedsrc
 --showAllMismatches:on
