--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -5,6 +5,7 @@
 --warning[Deprecated]:off
 --warning[UnusedImport]:off
 --warning[UnsafeSetLen]:off
+--warning[ProveInit]:off
 -d:shellThrowException
 --embedsrc
 --showAllMismatches:on
