--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,37 +4,23 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Cache choosenim
-      id: cache-choosenim
-      uses: actions/cache@v2
-      with:
-        path: ~/.choosenim
-        key: ${{ runner.os }}-choosenim-1.4.0
-    - name: Cache nimble
-      id: cache-nimble
-      uses: actions/cache@v2
-      with:
-        path: ~/.nimble
-        key: ${{ runner.os }}-nimble-1.2.0
-    - name: Install Nim
-      if: steps.cache-choosenim.outputs.cache-hit != 'true' || steps.cache-nimble.outputs.cache-hit != 'true'
-      run: |
-        export CHOOSENIM_CHOOSE_VERSION="1.4.0"
-        curl https://nim-lang.org/choosenim/init.sh -sSf > init.sh
-        sh init.sh -y
-    - name: Run tests
-      run: |
-        export PATH=$HOME/.nimble/bin:$PATH
-        nimble -y test
-        nimble install -y
-    - name: Build docs
-      run: |
-        export PATH=$HOME/.nimble/bin:$PATH
-        nimble docgen
-    - name: Publish docs
-      uses: crazy-max/ghaction-github-pages@v1
-      with:
-        build_dir: docs
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v2
+      - uses: alaviss/setup-nim@master
+        with:
+          path: '../nim'
+          version: 'version-1-4'
+      - name: Run tests
+        run: |
+          export PATH=$HOME/.nimble/bin:$PATH
+          nimble -y test
+          nimble install -y
+      - name: Build docs
+        run: |
+          export PATH=$HOME/.nimble/bin:$PATH
+          nimble docgen
+      - name: Publish docs
+        uses: crazy-max/ghaction-github-pages@v1
+        with:
+          build_dir: docs
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
