--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,8 @@ name: Build
 on: [push]
 jobs:
   build:
+    if: |
+      !contains(github.event.head_commit.message, '>>>')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
