--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Build docs
         run: |
           export PATH=$HOME/.nimble/bin:$PATH
-          nimble docgen
+          hmisc-putils docgen
       - name: Publish docs
         uses: crazy-max/ghaction-github-pages@v1
         with:
