--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -4,6 +4,7 @@
 --warning[Deprecated]:off
 --warning[UnusedImport]:off
 --warning[UnsafeSetLen]:off
+--warning[UnsafeDefault]:off
 --warning[ProveInit]:off
 -d:shellThrowException
 --embedsrc
