--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -6,6 +6,9 @@
 --warning[UnsafeSetLen]:off
 --warning[UnsafeDefault]:off
 --warning[ProveInit]:off
+--warning[UnreachableCode]:off
+--warning[UseBase]:off
+--warning[LockLevel]:off
 -d:shellThrowException
 --embedsrc
 --showAllMismatches:on
