[TEST] Standalone block fmt compilation test
- CHANGED ::
  - TEST add standalone block formatting test - does not work for cpp
    backend, need to fix.

--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -6,7 +6,7 @@
 --warning[UnsafeSetLen]:off
 --warning[UnsafeDefault]:off
 --warning[ProveInit]:off
---warning[UnreachableCode]:off
+# --warning[UnreachableCode]:off
 --warning[UseBase]:off
 --warning[LockLevel]:off
 -d:shellThrowException
