--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ jobs:
       !contains(github.event.head_commit.message, 'SKIP')
     runs-on: ubuntu-latest
     steps:
+      - run: sudo apt-get install graphviz
       - uses: actions/checkout@v2
       - uses: alaviss/setup-nim@master
         with:
