--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,8 +4,8 @@ on:
   push
 jobs:
   build:
-    # if: |
-    #   !contains(github.event.head_commit.message, 'SKIP')
+    if: |
+      !contains(github.event.head_commit.message, 'SKIP')
     runs-on: ubuntu-latest
     steps:
       - run: sudo apt-get install graphviz
