[FEATURE] Pretty-printer implementation and tests

--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -12,5 +12,8 @@
 -d:shellThrowException
 --embedsrc
 --showAllMismatches:on
+--nimcache:cache
 # --panics:on
 #--profileVm:on
+#--stacktrace:off
+--debugger:native
