--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   build:
     if: |
-      !contains(github.event.head_commit.message, 'SKIP')
+      !contains(github.event.head_commit.message, 'WIP')
 
     strategy:
       matrix:
