--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,5 +1,5 @@
 name:
-  build
+  test
 on:
   push
 jobs:
@@ -19,10 +19,4 @@ jobs:
         with:
           path: '../nim'
           version: ${{ matrix.nim }}
-      - run: "nimble -y test && nimble install -y"
-      - run: "hmisc-putils docgen"
-      - uses: crazy-max/ghaction-github-pages@v1
-        with:
-          build_dir: docs
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: "nimble -y test"
