[FEATURE] More misc lexer helpers

--- a/tests/nim.cfg
+++ b/tests/nim.cfg
@@ -10,7 +10,7 @@
 --warning[LockLevel]:off
 -d:shellThrowException
 --embedsrc
-#--showAllMismatches:on
+--showAllMismatches:on
 --nimcache:cache
 # --panics:on
 #--profileVm:on
