--- a/.github/workflows/docgen.yaml
+++ b/.github/workflows/docgen.yaml
@@ -4,6 +4,9 @@ on:
   push
 jobs:
   test:
+    if: |
+      !contains(github.event.head_commit.message, 'WIP')
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
