[REPO] Test installation as well

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -20,3 +20,4 @@ jobs:
           path: '../nim'
           version: ${{ matrix.nim }}
       - run: "nimble -y test"
+      - run: "nimble -y install"
