--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,5 +19,6 @@ jobs:
         with:
           path: '../nim'
           version: ${{ matrix.nim }}
+      - run: "nim --version"
       - run: "nimble -y test"
       - run: "nimble -y install"
