--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-        nim: ['version-1-4']
+        nim: ['version-1-4-8']
 
     runs-on: ubuntu-latest
     steps:
