[FIX] Test runner and compiler output parser
- CHANGED ::
  - Use hargparse for the `project_tasks` prelude - I it will be a normal
    CLI helper some day, no reason to postpone it any longer.
- ADDED ::
  - Test runner now uses `--processing:filenames` and remembers all file
    processing events.

--- a/.github/workflows/docgen.yaml
+++ b/.github/workflows/docgen.yaml
@@ -18,6 +18,6 @@ jobs:
       - run: "nimble docgen"
       - uses: crazy-max/ghaction-github-pages@v1
         with:
-          build_dir: docs
+          build_dir: htmldocs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
